# CMake-Udemy

1_hello_world/: CMakeLists.txt
2_basic_project_structure/: CMakeLists.txt  main.cpp  my_lib.cpp  my_lib.h
3_intermediate_project_structure/: CMakeLists.txt
3_intermediate_project_structure/MyClass/: CMakeLists.txt  MyClass.cpp  MyClass.h
3_intermediate_project_structure/src/: CMakeLists.txt  main.cpp
hello_world/: CMakeLists.txt  CMakelists.txt  main.cpp
